pacman/pacman-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: pacman
spec: {}
status: {}
