pacman/mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mongo
    app.kubernetes.io/component: mongo
    app.kubernetes.io/instance: mongo
  name: mongo
  namespace: CHANGE-ME
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    deployment: mongo
status:
  loadBalancer: {}
