pacman/pacman-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: pacman
  name: pacman
  namespace: CHANGE-ME
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: pacman
status:
  loadBalancer: {}
